--- a/package.json
+++ b/package.json
@@ -1,65 +1,57 @@
 {
-  "name": "react-webpack-typescript-starter",
-  "version": "0.1.0",
-  "description": "Starter kit for React, Webpack (with Hot Module Replacement), Typescript and Babel.",
+  "name": "wgrechner",
+  "version": "0.0.1",
+  "description": "",
   "keywords": [
-    "react",
-    "webpack",
-    "typescript",
-    "babel",
-    "sass",
-    "hmr",
-    "starter",
-    "boilerplate"
   ],
-  "author": "Viktor Persson",
+  "author": "Daniel Riedmueller",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vikpe/react-webpack-typescript-starter.git"
+    "url": "git+https://github.com/Noodlewood/wgrechner.git"
   },
-  "bugs": {
-    "url": "https://github.com/vikpe/react-webpack-typescript-starter/issues"
-  },
-  "homepage": "https://github.com/vikpe/react-webpack-typescript-starter",
+  "homepage": "",
   "scripts": {
     "lint": "npm run lint:ts && npm run lint:sass",
     "lint:ts": "tslint './src/**/*.ts*' --format=stylish --force",
     "lint:sass": "stylelint ./src/**/*.scss",
     "start": "webpack-dev-server",
+    "api": "json-server --watch db.json --port 3003",
     "test": "jest --watch --coverage"
   },
   "devDependencies": {
-    "@types/jest": "^19.2.3",
-    "@types/node": "^7.0.18",
-    "@types/react": "^15.0.24",
-    "@types/react-dom": "^15.5.0",
-    "awesome-typescript-loader": "^3.1.3",
-    "babel": "^6.23.0",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.1",
+    "@types/jest": "^16.0.3",
+    "@types/node": "^7.0.0",
+    "@types/react": "^15.0.0",
+    "@types/react-dom": "^0.14.20",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
+    "babel": "^6.5.2",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.13.0",
+    "css-loader": "^0.27.3",
     "file-loader": "^0.11.1",
     "identity-obj-proxy": "^3.0.0",
-    "image-webpack-loader": "^3.3.0",
-    "jest": "^20.0.0",
-    "node-sass": "^4.5.2",
-    "postcss-loader": "^2.0.5",
-    "react": "^15.5.4",
-    "react-addons-test-utils": "^15.5.1",
-    "react-dom": "^15.5.4",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.17.0",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-webpack-plugin": "^0.7.0",
-    "tslint": "^5.2.0",
-    "typescript": "^2.3.2",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
+    "image-webpack-loader": "^3.1.0",
+    "jest": "^18.1.0",
+    "json-loader": "^0.5.4",
+    "json-server": "^0.9.6",
+    "modernizr-loader": "^1.0.1",
+    "node-sass": "^4.2.0",
+    "postcss-loader": "^0.9.1",
+    "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
+    "tslint": "^4.3.1",
+    "typescript": "^2.1.4",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2",
+    "react-tabs": "^1.0.0"
   },
   "dependencies": {},
   "jest": {
